--- a/static/resume.yml
+++ b/static/resume.yml
@@ -7,7 +7,7 @@ personalInfo:
   workExperience: 5年经验
   status: 离职
   location: 甘肃兰州
-  born: 1990
+  born: 1986
   contact:
     phone: 18309467501
     email: youpp@126.com
@@ -26,7 +26,7 @@ personalInfo:
       url: https://facebook.com/buuug7
     -
       name: stack-overflow
-      url: https://stack-overflow.com/buuug7
+      url: https://stackoverflow.com/users/6080636/puguohong
 
 # Self description 自我描述
 selfDescription:
@@ -79,28 +79,25 @@ educationExperiences:
 workExperiences:
   -
     id: 0
-    time: 2011.6-2015.9
+    time: 2013.3-2015.3
     companyName: 瑞通科技
-    workPosition: Frontend Developer
+    workPosition: web前端
     workContents:
       -
         id: 0
         text: 负责公司项目的前端架构以及实现
       -
         id: 1
-        text: 维护公司前端项目
+        text: 旧项目的二次开发以及维护
   -
     id: 1
-    time: 2015.7-2017.9
+    time: 2015.7-2018.3
     companyName: 甘肃天奇
     workPosition: web前后端
     workContents:
       -
         id: 0
         text: 负责公司产品web前后端的设计、开发以及部署
-      -
-        id: 1
-        text: 根据项目具体要求，承担开发任务，按需完成工作计划任务
       -
         id: 2
         text: 维护公司web项目
