--- a/resume/static/resume.yml
+++ b/resume/static/resume.yml
@@ -7,7 +7,7 @@ personalInfo:
   workExperience: 5年经验
   status: 离职
   location: 甘肃兰州
-  born: 1986
+  born: 1990
   contact:
     phone: 18309467501
     email: youpp@126.com
@@ -79,25 +79,28 @@ educationExperiences:
 workExperiences:
   -
     id: 0
-    time: 2013.3-2015.3
+    time: 2011.6-2015.9
     companyName: 瑞通科技
-    workPosition: web前端
+    workPosition: Frontend Developer
     workContents:
       -
         id: 0
         text: 负责公司项目的前端架构以及实现
       -
         id: 1
-        text: 旧项目的二次开发以及维护
+        text: 维护公司前端项目
   -
     id: 1
-    time: 2015.7-2018.3
+    time: 2015.7-2017.9
     companyName: 甘肃天奇
     workPosition: web前后端
     workContents:
       -
         id: 0
         text: 负责公司产品web前后端的设计、开发以及部署
+      -
+        id: 1
+        text: 根据项目具体要求，承担开发任务，按需完成工作计划任务
       -
         id: 2
         text: 维护公司web项目
