--- a/static/resume.yml
+++ b/static/resume.yml
@@ -4,7 +4,7 @@ personalInfo:
   name: 蒲国红
   sex: 男
   education: 本科
-  workExperience: 3-5年经验
+  workExperience: 5年经验
   status: 离职
   location: 甘肃兰州
   born: 1986
@@ -30,13 +30,13 @@ selfDescription:
 skills:
   -
     name: HTML5
-    level: 80
+    level: 75
   -
     name: CSS3
-    level: 80
+    level: 75
   -
     name: JavaScript
-    level: 70
+    level: 65
   -
     name: PHP
     level: 70
@@ -48,10 +48,10 @@ skills:
     level: 70
   -
     name: Vue
-    level: 70
+    level: 65
   -
     name: jQuery
-    level: 80
+    level: 75
 
 # Job intension 求职意向
 jobIntension:
@@ -73,28 +73,40 @@ educationExperiences:
 workExperiences:
   -
     id: 0
-    time: 2013.3-2015.3
+    time: 2013.6-2015.9
     companyName: 瑞通科技
-    workPosition: web前端
+    workPosition: Frontend Developer
     workContents:
       -
         id: 0
-        text: 负责公司项目的前端架构以及实现
+        text: 维护公司已有前端项目，负责公司Web项目前端开发
       -
         id: 1
-        text: 旧项目的二次开发以及维护
+        text: 负责前端开发标准规范的制定、维护
+      -
+        id: 2
+        text: 与美工、后端工程相互配合，负责公司各产品易用性改进、界面技术优化和性能优化
   -
     id: 1
-    time: 2015.7-2018.3
+    time: 2015.7-2017.9
     companyName: 甘肃天奇
     workPosition: web前后端
     workContents:
       -
         id: 0
-        text: 负责公司产品web前后端的设计、开发以及部署
+        text: 维护公司web项目，参与公司web项目前后端的设计、开发以及部署
+      -
+        id: 1
+        text: 根据项目具体要求，承担开发任务，配合后端开发人员接入相关接口数据并展现
       -
         id: 2
-        text: 维护公司web项目
+        text: 对旧项目的改进升级以及二次开发
+      -
+        id: 3
+        text: 负责手机端和PC端产品的前端页面开发
+      -
+        id: 4
+        text: 负责前后端开发标准规范的制定、维护
 
 # Project experiences 项目经验
 projectExperiences:
@@ -102,7 +114,7 @@ projectExperiences:
     id: 0
     name: 鸡汤文
     url: http://soups.tq0.com/
-    position: Full Stack
+    position: Frontend | Backend
     description: 一个用来分享和收藏心灵鸡汤的网站
   -
     id: 1
